--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    // Notification
+    <string name="msg_subscribed">Done</string>
+    <string name="msg_subscribe_failed">Failed</string>
+
 </resources>
